Немного поправила шапку

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
           <a class="glyphicon glyphicon-align-justify navbar-brand" href="#"></a>
         </div>
 
-        <ul class="breadcrumb col-lg-9">
+        <ul class="breadcrumb col-lg-8">
           <li><a href="#">Главная</a></li>
           <li><a href="#">2013</a></li>
           <li class="active">Ноябрь</li>
         </ul>
 
-        <div class="glyphicon glyphicon-search navbar-brand"></div>
+        <div class="glyphicon glyphicon-search navbar-brand icon-search"></div>
 
         <div class="btn-group pull-right">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            Dropdown
+          <button type="submit" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            Районы Новосибирской области
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
@@ -46,26 +46,22 @@
         </div>
       </nav>
 
-      <div class="row search-field">
-        <div class="navbar-collapse collapse col-lg-1">
+      <form class="form-search">
+        <div class="row navbar-collapse collapse col-lg-2 form-menu">
           <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Меню
+            По разделу
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li><a href="#">Текст подпункта</a></li>
             <li><a href="#">Текст подпункта</a></li>
-            <li class="divider"></li>
             <li><a href="#">Текст подпункта</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-8">
-          <input type="text" class="form-control">
-        </div>
-
-        <button type="button" class="glyphicon glyphicon-search">Найти</button>
-      </div>
+        <input type="text" class="form-control col-lg-9">
+        <button type="submit" class="glyphicon glyphicon-search">Найти</button>
+      </form>
 
       <div class="container col-lg-2 pull-left shape">
         <div class="row">
@@ -143,8 +139,8 @@
             </div>
             <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
             <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-            <button type="button" class="btn btn-danger">Уволен</button>
-            <button type="button" class="btn btn-info">Выдать Оскар</button>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
 
 
@@ -157,8 +153,8 @@
             </div>
             <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
             <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-            <button type="button" class="btn btn-danger">Уволен</button>
-            <button type="button" class="btn btn-info">Выдать Оскар</button>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
 
           <div class="col-lg-4 navbar navbar-default">
@@ -170,14 +166,14 @@
             </div>
             <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
             <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-            <button type="button" class="btn btn-danger">Уволен</button>
-            <button type="button" class="btn btn-info">Выдать Оскар</button>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="js/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
