Уменьшила личные карты работников

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <thead class="navbar navbar-inverse">
             <tr>
               <th class="col-lg-4">Участок - адрес</th>
-              <th>Л/с</th>
-              <th>Тариф</th>
-              <th colspan="2">Оплаты в этом месяце</th>
-              <th>Баланс</th>
+              <th class="col-lg-1">Л/с</th>
+              <th class="col-lg-1">Тариф</th>
+              <th class="col-lg-2" colspan="2">Оплаты в этом месяце</th>
+              <th class="col-lg-1">Баланс</th>
             </tr>
             </thead>
             <tbody class="shadow">
@@ -100,12 +100,12 @@
             <table class="table table-bordered table-condensed table-hover shadow table-inner pull-right">
               <tbody>
               <tr>
-                <td class="cell-name">Немировича-Данченко</td>
-                <td>1 500</td>
-                <td>544 654</td>
-                <td>545</td>
-                <td>50%</td>
-                <td>544 545</td>
+                <td class="cell-name col-lg-4">Немировича-Данченко</td>
+                <td class="col-lg-2">1 500</td>
+                <td class="col-lg-2">544 654</td>
+                <td class="col-lg-2">545</td>
+                <td class="col-lg-2">50%</td>
+                <td class="col-lg-2">544 545</td>
               </tr>
               </tbody>
               <tbody>
@@ -128,11 +128,12 @@
       <div class="container col-lg-8 pull-right map-officer">
         <div class="row">
           <h4>Карточки сотрудников ЖЭУ не получивших оскар</h4>
-          <div class="col-lg-4 col-lg-offset-right-1 navbar navbar-default">
+
+          <div class="col-lg-3  col-lg-offset-right-1 navbar navbar-default card">
             <p><strong>Данилко Игорь Ивонович</strong></p>
-            <div class="row position">
-              <div class="col-lg-3 glyphicon glyphicon-user"></div>
-              <div class="col-lg-8">
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
                 <p>Электрогазосварщик</p>
                 <p>Участок №10</p>
               </div>
@@ -144,12 +145,14 @@
           </div>
 
 
-          <div class="col-lg-4 navbar navbar-default">
+          <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
             <p><strong>Данилко Игорь Ивонович</strong></p>
-            <div class="col-lg-3 glyphicon glyphicon-user"></div>
-            <div class="col-lg-9">
-              <p>Электрогазосварщик</p>
-              <p>Участок №10</p>
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
+                <p>Электрогазосварщик</p>
+                <p>Участок №10</p>
+              </div>
             </div>
             <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
             <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
@@ -157,12 +160,14 @@
             <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
 
-          <div class="col-lg-4 navbar navbar-default">
+          <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
             <p><strong>Данилко Игорь Ивонович</strong></p>
-            <div class="col-lg-3 glyphicon glyphicon-user"></div>
-            <div class="col-lg-9">
-              <p>Электрогазосварщик</p>
-              <p>Участок №10</p>
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
+                <p>Электрогазосварщик</p>
+                <p>Участок №10</p>
+              </div>
             </div>
             <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
             <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
