--- a/index.html
+++ b/index.html
@@ -13,48 +13,50 @@
 
 <body>
   <div class="container">
-    <nav class="navbar-collapse collapse">
-      <div class="navbar-header">
-        <a href="#" class="glyphicon glyphicon-align-justify navbar-brand"></a>
-      </div>
+    <header>
+      <nav class="navbar-collapse collapse">
+        <div class="navbar-header">
+          <a href="#" class="glyphicon glyphicon-align-justify navbar-brand"></a>
+        </div>
 
-      <ul class="breadcrumb col-lg-8">
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">2013</a></li>
-        <li class="active">Ноябрь</li>
-      </ul>
-
-      <div class="glyphicon glyphicon-search navbar-brand icon-search"></div>
-
-      <div class="btn-group pull-right">
-        <button type="submit" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          Районы Новосибирской области
-          <div class="caret"></div>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Dropdown ссылка</a></li>
-          <li><a href="#">Dropdown ссылка</a></li>
-          <li><a href="#">Dropdown ссылка</a></li>
+        <ul class="breadcrumb col-lg-8">
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">2013</a></li>
+          <li class="active">Ноябрь</li>
         </ul>
-      </div>
-    </nav>
 
-    <form class="form-search">
-      <div class="row navbar-collapse collapse col-lg-2 form-menu">
-        <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown">
-          По разделу
-          <div class="caret"></div>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Текст подпункта</a></li>
-          <li><a href="#">Текст подпункта</a></li>
-          <li><a href="#">Текст подпункта</a></li>
-        </ul>
-      </div>
+        <div class="glyphicon glyphicon-search navbar-brand icon-search"></div>
 
-      <input type="text" class="form-control col-lg-9">
-      <button type="submit" class="glyphicon glyphicon-search">Найти</button>
-    </form>
+        <div class="btn-group pull-right">
+          <button type="submit" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            Районы Новосибирской области
+            <div class="caret"></div>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#"><i class="glyphicon glyphicon-tree-deciduous"></i>Ленинский район</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-tree-deciduous"></i>Ленинский район</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-tree-deciduous"></i>Ленинский район</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <form class="form-search">
+        <div class="row navbar-collapse collapse col-lg-2 form-menu">
+          <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown">
+            По разделу
+            <div class="caret"></div>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Текст подпункта</a></li>
+            <li><a href="#">Текст подпункта</a></li>
+            <li><a href="#">Текст подпункта</a></li>
+          </ul>
+        </div>
+
+        <input type="text" class="form-control col-lg-9">
+        <button type="submit" class="glyphicon glyphicon-search">Найти</button>
+      </form>
+    </header>
 
     <div class="container col-lg-2 pull-left shape">
       <div class="row">
@@ -214,66 +216,70 @@
                   <div>545</div>
                   <div>545</div>
                 </div>
-
           </div>
         </div>
       </div>
-    </div>
 
+      <!--vvvvvvvvvvvvvvvvv-->
+      <div class="container col-lg-8 pull-right map-officer">
+        <div class="row">
+          <h4>Карточки сотрудников ЖЭУ не получивших оскар</h4>
 
-    <!--vvvvvvvvvvvvvvvvv-->
-    <div class="container col-lg-8 pull-right map-officer">
-      <div class="row">
-        <h4>Карточки сотрудников ЖЭУ не получивших оскар</h4>
-
-        <div class="col-lg-3  col-lg-offset-right-1 navbar navbar-default card">
-          <p><strong>Данилко Игорь Ивонович</strong></p>
-          <div class="position">
-            <div class="glyphicon glyphicon-user"></div>
-            <div class="pull-right text">
-              <p>Электрогазосварщик</p>
-              <p>Участок №10</p>
+          <div class="col-lg-3  col-lg-offset-right-1 navbar navbar-default card">
+            <p><strong>Данилко Игорь Ивонович</strong></p>
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
+                <p>Электрогазосварщик</p>
+                <p>Участок №10</p>
+              </div>
             </div>
+            <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
+            <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
-          <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
-          <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-          <button type="submit" class="btn btn-danger">Уволен</button>
-          <button type="submit" class="btn btn-info">Выдать Оскар</button>
-        </div>
 
 
-        <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
-          <p><strong>Данилко Игорь Ивонович</strong></p>
-          <div class="position">
-            <div class="glyphicon glyphicon-user"></div>
-            <div class="pull-right text">
-              <p>Электрогазосварщик</p>
-              <p>Участок №10</p>
+          <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
+            <p><strong>Данилко Игорь Ивонович</strong></p>
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
+                <p>Электрогазосварщик</p>
+                <p>Участок №10</p>
+              </div>
             </div>
+            <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
+            <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
-          <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
-          <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-          <button type="submit" class="btn btn-danger">Уволен</button>
-          <button type="submit" class="btn btn-info">Выдать Оскар</button>
-        </div>
 
-        <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
-          <p><strong>Данилко Игорь Ивонович</strong></p>
-          <div class="position">
-            <div class="glyphicon glyphicon-user"></div>
-            <div class="pull-right text">
-              <p>Электрогазосварщик</p>
-              <p>Участок №10</p>
+          <div class="col-lg-3  col-lg-offset-1 navbar navbar-default card">
+            <p><strong>Данилко Игорь Ивонович</strong></p>
+            <div class="position">
+              <div class="glyphicon glyphicon-user"></div>
+              <div class="pull-right text">
+                <p>Электрогазосварщик</p>
+                <p>Участок №10</p>
+              </div>
             </div>
+            <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
+            <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
+            <button type="submit" class="btn btn-danger">Уволен</button>
+            <button type="submit" class="btn btn-info">Выдать Оскар</button>
           </div>
-          <div class="glyphicon glyphicon-earphone"> 8-925-111-11-11</div>
-          <div class="glyphicon glyphicon-globe"> dfsfi@gmail</div>
-          <button type="submit" class="btn btn-danger">Уволен</button>
-          <button type="submit" class="btn btn-info">Выдать Оскар</button>
         </div>
       </div>
+
+      <futer>
+        
+      </futer>
     </div>
-  </div>
+
+
+
 
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="js/bootstrap.min.js"></script>
